--- a/opentreemap/importer/templates/importer/partials/import_table.html
+++ b/opentreemap/importer/templates/importer/partials/import_table.html
@@ -20,7 +20,7 @@
                 {% elif ie.is_loading %}
                     {{ ie.row_count }}
                 {% elif ie.is_running %}
-                    {{ ie.completed_row_count }} / {{ ie.row_count }}
+                    {{ ie.completed_row_summary }}
                 {% endif %}
             </td>
             <td>
