Import and refresh operations update one table instead of all tables

--- a/opentreemap/importer/templates/importer/partials/import_table.html
+++ b/opentreemap/importer/templates/importer/partials/import_table.html
@@ -51,4 +51,4 @@
 
 {% endif %}
 
-<input type="hidden" name="{{ table.name }}-has-pending" value="{{ table.has_pending }}">
+<input type="hidden" id="{{ table.name }}-has-pending" value="{{ table.has_pending }}">
