--- a/opentreemap/importer/templates/importer/partials/import_tables.html
+++ b/opentreemap/importer/templates/importer/partials/import_tables.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h4>{{ table.title }}</h4>
-                <div class="import-table">
+                <div id="{{ table.name }}" class="import-table">
                     {% include 'importer/partials/import_table.html'%}
                 </div>
             </div>
