Rework styling on create map pages for new pricing model.

--- a/opentreemap/treemap/css/sass/partials/pages/_createmap.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_createmap.scss
@@ -141,122 +141,11 @@
 
 #price-table {
     margin: 0 15px;
-    text-align: center;
 
-    [class*="span"] {
-        margin-left: 0;
+    otm-pricing-overview {
+        right: 0;
+        top: 0;
     }
-
-    h1, h2, h3, h4, h5, h6 {
-        margin-top: 12px;
-        margin-bottom: 1px;
-    }
-    h3 {
-        margin-top: 8px;
-        margin-bottom: 5px;
-    }
-    hr {
-        margin: 40px 0;
-    }
-
-    .plan-details {
-        &.plan-selected {
-            .price-body {
-                background-color: lighten($light-gray-color, 3%);
-            }
-        }
-    }
-
-    .price-level {
-        padding: 0;
-        width: 25%;
-
-        &:first-child .price-body {
-            border-left: solid 1px $light-gray-color;
-        }
-
-        h6 {
-            margin-top: -2px;
-            text-transform: uppercase;
-            color: $subtext-color;
-            margin-bottom: 8px;
-        }
-
-        .price-body {
-            border-color: $light-gray-color;
-            border-width: 1px 1px 1px 0;
-            border-style: solid;
-        }
-        .price-header {
-            height: 215px;
-            padding-top: 15px;
-
-            h4 {
-                margin-top: 15px;
-                font-weight: 700;
-
-                &.aspen {
-                    color: #ADD142;
-                }
-                &.maple {
-                    color: #598139;
-                }
-                &.oak {
-                    color: #598139;
-                }
-                &.sycamore {
-                    color: #54823c;
-                }
-            }
-            h6 {
-                text-transform: none;
-                width: 75%;
-                margin: 6px auto 12px;
-                line-height: 1.6rem;
-            }
-            img {
-                width: 114px;
-            }
-        }
-        .price-aspect {
-            border-bottom: 1px solid $light-gray-color;
-            padding: 6px 20px;
-            text-align: center;
-            &:last-child {
-                border-bottom: 0;
-            }
-
-            .per-month {
-                font-size: 1.2rem;
-                vertical-align: text-top;
-                line-height: 3.2rem;
-                color: $subtext-color;
-            }
-
-            &.select-plan {
-                min-height: 150px;
-
-                .label {
-                    padding: 6px 12px;
-                    margin-top: 6px;
-                    margin-bottom: 12px;
-                    border-radius: 0;
-                }
-                .btn-select-plan {
-                    margin-bottom: 14px;
-                }
-                h2 {
-                    margin-bottom: 10px;
-                    margin-top: 4px;
-                }
-                h6 {
-                    text-transform: none;
-                    margin-bottom: 12px;
-                }
-            }
-        }
-    }
-
 }
 
 #temporarily-disabled {
