Cleanup styling for small screens.
Fixes a styling issue with the header bar on the comment moderation page.

Also fixes styling issue on the global navbar and an issue causing scrollbars
to appear on the map section on small screens.

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -59,9 +59,9 @@
 
 {% if settings.MODELING_VIEW_NAME %}
   {% if request.instance|feature_enabled:'modeling' %}
-    <li class="{% block activemodeling %}{% endblock %}">
+    <li class="{% block activemodeling %}{% endblock %} hidden-xs">
       <a href="{% url settings.MODELING_VIEW_NAME instance_url_name=request.instance.url_name %}">
-        <span class="hidden-xs">{% trans "Plan" %}</span>
+        <span>{% trans "Plan" %}</span>
       </a>
     </li>
   {% endif %}
