--- a/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
+++ b/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
@@ -2,13 +2,13 @@
 {% load sort %}
 
 <div class="page-header">
-  <div class="col-md-2">
+  <div class="col-xs-2">
       <i class="icon-menu" id="toggle-sidebar"></i>
   </div>
-  <div class="col-md-6 text-center">
+  <div class="col-xs-6 text-center">
       <h1>{% trans "Comments" %}</h1>
   </div>
-  <div class="col-md-4 text-right">
+  <div class="col-xs-4 text-right">
       <div class="btn-group">
         <button type="button" class="btn btn-sm btn-info dropdown-toggle" data-toggle="dropdown">
           {{ comments_filter }} <span class="caret"></span>
