--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -11,6 +11,11 @@
     @media (max-width: 979px) {
         margin-bottom: 0;
         position: absolute;
+
+        .navbar-collapse {
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 
     .nav {
