--- a/opentreemap/treemap/templates/treemap/partials/map_feature_accordion.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_feature_accordion.html
@@ -22,7 +22,7 @@
     <input type="hidden" name="plot.address_zip" value="{{ plot.address_zip}}">
 
     {% else %}
-    <label>{{ term.Resource }}</label>
+    <label>{{ term.Resource.singular }}</label>
     <div class="field-view">{{ title }}</div>
     {% endif %}
 
