--- a/opentreemap/treemap/templates/treemap/resource_detail.html
+++ b/opentreemap/treemap/templates/treemap/resource_detail.html
@@ -6,7 +6,7 @@
 {% load udf %}
 {% load util %}
 
-{% block page_title %} | {{ feature.display_name }} {{ feature.pk }}{% endblock %}
+{% block page_title %} | {{ feature.terminology.singular }} {{ feature.pk }}{% endblock %}
 
 {% block subclass_details %}
 
