--- a/opentreemap/importer/templates/importer/partials/row_status.html
+++ b/opentreemap/importer/templates/importer/partials/row_status.html
@@ -27,7 +27,7 @@
 {% block extra_buttons %}
     {% if tree_limit_exceeded %}
         <div class="alert alert-danger">
-          Your tree map currently contains {{ tree_count }} trees. This data upload will cause your tree map to exceed the {{ tier_tree_limit }} number of trees allowed in your subscription level. Please upgrade to a larger subscription plan or upload {{ remaining_tree_limit }} or fewer trees.
+          Your tree map currently contains {{ tree_count }} trees. This data upload will cause your tree map to exceed the {{ tree_limit }} number of trees allowed in your subscription level. Please upgrade to a larger subscription plan or upload {{ remaining_tree_limit }} or fewer trees.
         </div>
     {% elif ie.can_add_to_map %}
         <a data-action="commit" class="btn btn-info btn-large" href="{{ commit_url }}">
