--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -193,6 +193,10 @@
                     font-size: 16px;
                     font-weight: 100;
                 }
+
+                .spinner {
+                    padding-right: 5px;
+                }
             }
 
             .content {
