Add styling for create map summary page

--- a/opentreemap/treemap/css/sass/partials/pages/_createmap.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_createmap.scss
@@ -115,6 +115,11 @@
     }
 }
 
+.plan-cost-note {
+    color: #aaa;
+    font-size: 12px;
+}
+
 #pricing-summary {
     position: relative;
     top: 20px;
