Add the unlocalize template filter to PKs used in Django templates.
I went through the source and grepped for '(id|pk) ?}}' and added an
'unlocalize' filter to everywhere it seemed appropriate.  I'm sure there
are other places where the template variables are named differently that
I've missed, but this should prevent a slew of bugs waiting to happen.

--- a/opentreemap/treemap/templates/treemap/field/species_typeahead.html
+++ b/opentreemap/treemap/templates/treemap/field/species_typeahead.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load l10n %}
 {% load instance_config %}
 {% load species_thumbprint %}
 
@@ -6,7 +7,7 @@
        data-typeahead-hidden
        id="{{ field.label }}-hidden"
        name="{{ field.identifier }}"
-       value="{{ field.value.id }}"/>
+       value="{{ field.value.id|unlocalize }}"/>
 <input type="text"
        data-typeahead-input="{{ field.identifier }}"
        id="{{ field.label }}-typeahead"
@@ -15,7 +16,7 @@
        data-thumbprint="{{ request|species_thumbprint }}"
        value="{{ field.value.display_name }}"/>
 <input type="hidden"
-       value="{{ field.value.id }}"
+       value="{{ field.value.id|unlocalize }}"
        data-typeahead-restore="{{ field.identifier }}"
        data-datum="id" />
 <p>
