--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -207,7 +207,7 @@
                 right: 0;
                 bottom: 0;
                 overflow-y: auto;
-                padding: 16px;
+                padding: 16px 16px 0;
                 margin-bottom: 40px;
 
                 &:after {
