new warning and danger state styles for modals.

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -16,6 +16,7 @@
 @import "partials/header";
 @import "partials/subheader";
 @import "partials/footer";
+@import "partials/modals";
 @import "partials/error";
 
 // -- Page Specific
