--- a/opentreemap/treemap/templates/treemap/field/div.html
+++ b/opentreemap/treemap/templates/treemap/field/div.html
@@ -1,19 +1,21 @@
 {% if field.is_visible %}
-    <label>{{ field.label|safe }}</label>
-    <div class="field-view"
-        {% include "treemap/field/attrs.html" with class="display" %}>
-        {{ field.display_value|default_if_none:"" }}
-    </div>
-    {% if field.is_editable %}
-        <div class="field-edit"
-            style="display: none;"
-            {% include "treemap/field/attrs.html" with class="edit" %}>
-            {% block inputs %}
-            {% include "treemap/field/inputs.html" %}
-            {% endblock inputs %}
+    <div class="form-group">
+        <label>{{ field.label|safe }}</label>
+        <div class="field-view"
+            {% include "treemap/field/attrs.html" with class="display" %}>
+            {{ field.display_value|default_if_none:"" }}
         </div>
-        <div class="alert alert-danger text-danger"
-            style="display: none;"
-            {% include "treemap/field/attrs.html" with class="error" %}></div>
-    {% endif %}
+        {% if field.is_editable %}
+            <div class="field-edit"
+                style="display: none;"
+                {% include "treemap/field/attrs.html" with class="edit" %}>
+                {% block inputs %}
+                {% include "treemap/field/inputs.html" %}
+                {% endblock inputs %}
+            </div>
+            <div class="alert alert-danger text-danger"
+                style="display: none;"
+                {% include "treemap/field/attrs.html" with class="error" %}></div>
+        {% endif %}
+    </div>
 {% endif %}
