--- a/opentreemap/treemap/templates/treemap/partials/photo_review.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo_review.html
@@ -1,10 +1,33 @@
 {% load i18n %}
+{% load sort %}
 
-{# JS stuffs the next photo into [data-photo-container], so it should be the container around each photo.html #}
-<div class="row" data-photo-container>
-  {% for photo in photos %}
-  {% include "treemap/partials/photo.html" %}
-  {% endfor %}
+<div class="row comment-table">
+    <div class="col-lg-12">
+        <table class="table table-hover admin-table">
+            <thead>
+                <tr>
+                    <th>
+                        {% trans "Id" %}
+                    </th>
+                    <th>
+                        {% trans "Photo" %}
+                    </th>
+                    <th class="actions">
+                        {% trans "Actions" %}
+                    </th>
+                    <th>
+                        <a href="">{% trans "Date" %}</a>
+                    </th>
+                </tr>
+            </thead>
+            {# JS stuffs the next photo into [data-photo-container], so it should be the container around each photo.html #}
+            <tbody data-photo-container>
+              {% for photo in photos %}
+              {% include "treemap/partials/photo.html" %}
+              {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 
 <div class="text-center">
