--- a/opentreemap/treemap/templates/treemap/partials/form_buttons.html
+++ b/opentreemap/treemap/templates/treemap/partials/form_buttons.html
@@ -2,6 +2,8 @@
 
 <div class="col-xs-4 text-right">
     <img class="spinner" src="{{ STATIC_URL }}img/spinner.gif" style="display: none;">
+    {% block other_buttons %}
+    {% endblock other_buttons %}
     <button data-class="display" class="btn btn-info editBtn">
         {% trans "Edit" %}
     </button>
