Refactor photo review pagination to work similarly to comment moderation
 - Removes the 'next_photo' endpoint, instead refreshing the entire table
   when a photo is approved or rejected.

 - Switches to using the Django Paginator helper class for pagination

 - Introduces a small helper class for getting different variations of url
   parameters with/without a base URL

 - Don't show photos on review page for opted-out GSI resources.

 - Only show each photo once on the photo review page.
   Photos that had been rotated were appearing multiple times.

Connects to OpenTreeMap/otm-addons#828
Connects to #2156

--- a/opentreemap/treemap/templates/treemap/partials/photo.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo.html
@@ -12,8 +12,8 @@
         </a>
     </td>
     <td>
-        <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.map_feature.pk photo_id=photo.pk action="approve" %}">{% trans "Approve" %}</a> |
-        <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.map_feature.pk photo_id=photo.pk action="reject" %}">{% trans "Reject" %}</a> |
+        <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.map_feature.pk photo_id=photo.pk action="approve" %}?{{ full_params }}">{% trans "Approve" %}</a> |
+        <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.map_feature.pk photo_id=photo.pk action="reject" %}?{{ full_params }}">{% trans "Reject" %}</a> |
         <a href="{{ photo|detail_link }}">{% trans "View Detail" %}</a>
     </td>
     <td>{{ photo.created_at|naturaltime }}</td>
