--- a/opentreemap/treemap/templates/treemap/partials/photo_review.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo_review.html
@@ -30,16 +30,4 @@
     </div>
 </div>
 
-<div class="text-center">
-<ul class="pagination pagination-sm">
-    <li class="{% if not prev_page %}disabled{% endif %}">
-        <a data-page="{{ prev_page|default_if_none:"" }}">&laquo;</a>
-    </li>
-    {% for page in pages %}
-    <li class="{% if cur_page == page %}active{% endif %}"><a data-page="{{ page }}">{{ page }}</a></li>
-    {% endfor %}
-    <li class="{% if not next_page %}disabled{% endif %}">
-        <a data-page="{{ next_page|default_if_none:""}}">&raquo;</a>
-    </li>
-</ul>
-</div>
+{% include 'treemap/partials/paging_controls.html' with paging=photos url=url_for_pagination %}
