cleaned up known issues since last commit

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -297,6 +297,32 @@
             text-transform: uppercase;
             padding: 20px 10px 20px 15px;
             font-size: 1.3rem;
+
+            > a {
+                color: darken($primary-color, 5%);
+                text-decoration: none;
+
+                &:after {
+                    content: '\e9e8';
+                    font-family: "fontello";
+                    font-style: normal;
+                    font-weight: normal;
+                    display: inline-block;
+                    text-decoration: inherit;
+                    width: 1em;
+                    margin-right: .2em;
+                    text-align: center;
+                    font-variant: normal;
+                    text-transform: none;
+                    line-height: 1em;
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
+                }
+            }
+
+            .dropdown-menu {
+                text-transform: none;
+            }
         }
 
         tr {
@@ -310,6 +336,16 @@
         td {
             padding: 12px 10px 12px 15px;
             vertical-align: middle;
+        }
+
+        select {
+            margin: -2px 0;
+        }
+
+        .field-view {
+            color: inherit;
+            margin: inherit;
+            top: inherit;
         }
     }
 
@@ -389,7 +425,7 @@
         }
     }
 
-    label {
+    label:not(.checkbox) {
         color: $navbar-color;
         font-weight: 600;
         text-transform: uppercase;
@@ -505,7 +541,7 @@
     background-color: $paper;
     border-radius: 5px;
     color: #424242;
-    padding: 0.5rem 1.5rem;
+    padding: 1rem 1.5rem;
     margin: 0.5rem;
 
     .field-controls {
@@ -513,6 +549,10 @@
     }
     input {
         width: auto;
+    }
+
+    label.checkbox {
+        margin: 0;   
     }
 }
 
