--- a/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
+++ b/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
@@ -39,7 +39,7 @@
   <div class="comments" data-comments-params="{{ comments_params }}">
     <div class="row comment-table">
       <div class="col-lg-12">
-        <table class="table table-hover">
+        <table class="table admin-table">
           <thead>
             <tr data-comments-sort>
               <th class="selector">
